# window-manager

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
crates/shellwright/: Cargo.toml
crates/shellwright-core/: Cargo.toml
crates/shellwright-core/src/: action.rs  backend.rs  config.rs  error.rs  event.rs  hotkey.rs  layout.rs  lib.rs  window.rs  workspace.rs
crates/shellwright-macos/: Cargo.toml
crates/shellwright-macos/src/: backend.rs  hotkeys.rs  lib.rs
crates/shellwright-wayland/: Cargo.toml
crates/shellwright-wayland/src/: compositor.rs  input.rs  lib.rs
crates/shellwright-windows/: Cargo.toml
crates/shellwright-windows/src/: backend.rs  hotkeys.rs  lib.rs
crates/shellwright/src/: main.rs
docs/: index.html
