[package]
name        = "shellwright-core"
description = "Platform-agnostic window manager abstractions"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace   = true
serde.workspace     = true
toml.workspace      = true
bitflags.workspace  = true
